# dbe

./: CMakeLists.txt  NOTICE  README.md  resources.qrc
.github/workflows/: dunedaq-develop-cpp-ci.yml
apps/: GraphBuilder.cpp  GraphBuilder.hpp  Main.cpp  SchemaMain.cpp  create_config_plot.cxx  graphtool.cpp
apps/SchemaEditor/: SchemaAttributeEditor.cpp  SchemaClassEditor.cpp  SchemaCommand.cpp  SchemaCustomAttributeModel.cpp  SchemaCustomFileModel.cpp  SchemaCustomMethodImplementationModel.cpp  SchemaCustomMethodModel.cpp  SchemaCustomRelationshipModel.cpp  SchemaCustomSubClassModel.cpp  SchemaCustomSuperClassModel.cpp  SchemaCustomTableModel.cpp  SchemaGraphicArrow.cpp  SchemaGraphicBrokenArrow.cpp  SchemaGraphicNote.cpp  SchemaGraphicObject.cpp  SchemaGraphicSegmentedArrow.cpp  SchemaGraphicsScene.cpp  SchemaIncludeFileWidget.cpp  SchemaKernelWrapper.cpp  SchemaMainWindow.cpp  SchemaMethodEditor.cpp  SchemaMethodImplementationEditor.cpp  SchemaNoteEditor.cpp  SchemaRelationshipEditor.cpp  SchemaTab.cpp
apps/graphtool/: gtool.cpp  segregate.cpp  stats.cpp
cmake/: dbeConfig.cmake.in
cmt/: doxygen.conf  requirements
cmt/fragments/: moc  moc_header  qrc  qrc_header  qrc_trailer  ui  ui_header
dbe/: BatchChangeWidget.h  BuildingBlockEditors.h  Command.h  CommitDialog.h  Conversion.h  CreateDatabaseWidget.h  CustomDelegate.h  CustomTableView.h  CustomTreeView.h  Exceptions.h  FileModel.h  GraphView.h  GraphicalClass.h  IncludeFileWidget.h  MainWindow.h  MyApplication.h  ObjectCreator.h  ObjectEditor.h  SchemaAttributeEditor.h  SchemaClassEditor.h  SchemaCommand.h  SchemaCustomAttributeModel.h  SchemaCustomFileModel.h  SchemaCustomMethodImplementationModel.h  SchemaCustomMethodModel.h  SchemaCustomRelationshipModel.h  SchemaCustomSubClassModel.h  SchemaCustomSuperClassModel.h  SchemaCustomTableModel.h  SchemaGraphicArrow.h  SchemaGraphicObject.h  SchemaGraphicsScene.h  SchemaKernelWrapper.h  SchemaMainWindow.h  SchemaMethodEditor.h  SchemaMethodImplementationEditor.h  SchemaRelationshipEditor.h  SchemaTab.h  Sorting.h  StyleUtility.h  (+53 more)
doc/: CREDITS.html  RELEASE_CHANGES.html  RELEASE_NOTES.md  RELEASE_NOTES.tdaq-07-01-00.html  build_documentation.sh
doc/documentation_Sphinx/: Makefile  about_dbe.rst  conf.py  index.rst  make_html_doc.sh  make_html_doc_atlasdaq.sh  make_html_doc_only_Ric.sh  release_changes.rst  small_beginning_note.rst
doc/doxygen_doc/: Doxyfile
doc/logo_images/: dbe_logo_LEGO.graffle
docs/: README.md  schemaeditor.md
icons/: Images.qrc  SchemaResource.qrc  SchemaView.schema.xml  View.data.xml  application.xbm  application.xpm  application_mask.xbm  binary.xbm  binary.xpm  binary_mask.xbm  computer-set.xbm  computer-set.xpm  computer-set_mask.xbm  computer.xbm  computer.xpm  computer_mask.xbm  crate.xbm  crate.xpm  crate_mask.xbm  detector.xbm  detector.xpm  detector_mask.xbm  environment.xbm  environment.xpm  environment_mask.xbm  hw-system.xpm  io-device.xpm  jar.xpm  kcmpci.xpm  module.xbm  module.xpm  module_mask.xbm  partition.xbm  partition.xpm  partition_mask.xbm  rack.xbm  rack.xpm  rack_mask.xbm  resource.qrc  resource.xbm  (+34 more)
include/dbe/: BatchChangeWidget.hpp  BuildingBlockEditors.hpp  Command.hpp  CommitDialog.hpp  Conversion.hpp  CustomDelegate.hpp  CustomFileView.hpp  CustomLineEdit.hpp  CustomTableView.hpp  CustomTreeView.hpp  Exceptions.hpp  FilterTextEdit.hpp  GraphView.hpp  GraphicalClass.hpp  IncludeFileWidget.hpp  MainWindow.hpp  ObjectCreator.hpp  ObjectEditor.hpp  OracleWidget.hpp  SchemaAttributeEditor.hpp  SchemaClassEditor.hpp  SchemaCommand.hpp  SchemaCustomAttributeModel.hpp  SchemaCustomMethodImplementationModel.hpp  SchemaCustomMethodModel.hpp  SchemaCustomModelInterface.hpp  SchemaCustomRelationshipModel.hpp  SchemaCustomSubClassModel.hpp  SchemaCustomSuperClassModel.hpp  SchemaGraphicArrow.hpp  SchemaGraphicBrokenArrow.hpp  SchemaGraphicNote.hpp  SchemaGraphicObject.hpp  SchemaGraphicSegmentedArrow.hpp  SchemaGraphicsScene.hpp  SchemaIncludeFileWidget.hpp  SchemaKernelWrapper.hpp  SchemaMainWindow.hpp  SchemaMethodEditor.hpp  SchemaMethodImplementationEditor.hpp  (+50 more)
schema/dbe/: core.schema.xml  dbe_unittest.data.xml
scripts/: dunedaq_dbe  dunedaq_schemaeditor
src/: Main.cpp  MyApplication.cpp  TableTab.cpp  graphtool.cpp
src/SchemaEditor/: SchemaAttributeEditor.cpp  SchemaClassEditor.cpp  SchemaCommand.cpp  SchemaCustomAttributeModel.cpp  SchemaCustomFileModel.cpp  SchemaCustomMethodImplementationModel.cpp  SchemaCustomMethodModel.cpp  SchemaCustomModelInterface.cpp  SchemaCustomRelationshipModel.cpp  SchemaCustomSubClassModel.cpp  SchemaCustomSuperClassModel.cpp  SchemaCustomTableModel.cpp  SchemaGraphicArrow.cpp  SchemaGraphicObject.cpp  SchemaGraphicsScene.cpp  SchemaKernelWrapper.cpp  SchemaMain.cpp  SchemaMainWindow.cpp  SchemaMethodEditor.cpp  SchemaMethodImplementationEditor.cpp  SchemaRelationshipEditor.cpp  SchemaTab.cpp
src/graphical/: GraphView.cpp  GraphicalClass.cpp
src/graphtool/: gtool.cpp  segregate.cpp  stats.cpp
src/internal/: Command.cpp  Conversion.cpp  MainWindow.cpp  StyleUtility.cpp  Validator.cpp  confaccessor.cpp  config_api.cpp  config_api_commands.cpp  config_api_get.cpp  config_api_graph.cpp  config_api_info.cpp  config_api_set.cpp  config_ui_info.cpp  datahandler.cpp  (+5 more)
test/: confaccessor_test.cpp  config_api_info_test.cpp  config_api_set_test.cpp  dbe_test_defs.hpp
theme/: DBE_Default_User_Settings.conf  Themes.qrc  dbe_DB_editor_default_settings.conf  stylesheet.qss  stylesheet2.qss
ui/: BatchChangeWidget.ui  CommitDialog.ui  CreateDatabaseWidget.ui  DBE.ui  EditCombo.ui  GraphView.ui  IncludeFileWidget.ui  NumericAttributeWidgetForm.ui  ObjectCreator.ui  ObjectEditor.ui  OracleWidget.ui  RelationshipWidgetForm.ui  SchemaAttributeEditor.ui  SchemaClassEditor.ui  SchemaIncludeFileWidget.ui  SchemaMainWindow.ui  SchemaMethodEditor.ui  SchemaMethodImplementationEditor.ui  SchemaNoteEditor.ui  SchemaRelationshipEditor.ui  StringAttributeWidgetForm.ui
unittest/: Graph_test.cxx  confaccessor_test.cxx  config_api_info_test.cxx  config_api_set_test.cxx  dbe_test_defs.hpp
(+56 files in other folders)
